Fixed the footer overflow in mobiles

--- a/main.css
+++ b/main.css
@@ -409,6 +409,7 @@ footer{
     color: white;
     text-align: center;
     padding: 4px;
+    margin: 10px 0px;
 }
 
 /* Footter ends here  */
