--- a/school.css
+++ b/school.css
@@ -6,7 +6,6 @@
 }
 .schoolwork{
     width: 100%;
-    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -26,7 +25,9 @@
 .schoolpara a{
     font-size: 25px;
 }
-
+.schoolview{
+    height: 100vh;
+}
   /* Big screen mobile view  */
 
   @media only screen and (max-width:797px){
@@ -52,6 +53,7 @@
     .schoolpara a{
         font-size: 15px;
     }
+    
 }
 
 /* small screen mobile view  */
